chore: add superuser account configuration for django admin panel

--- a/hackyeahAPI/.env.example
+++ b/hackyeahAPI/.env.example
@@ -1,5 +1,20 @@
-DJANGO_SECRET_KEY="{local-development-api-key}"
-DEBUG=1
-DJANGO_ALLOWED_HOSTS="{comma-separated-hosts}"
-DATABASE_URL="{add_postgres_conn_string_here}"
+# Logging level
 DJANGO_LOGLEVEL=INFO
+
+# Debug mode
+DEBUG=1
+
+# Secret key to django instance. Generate one using:
+# docker-compose run --rm django-web python -c "from django.core.management.utils import get_random_secret_key; print(f'django-insecure-{get_random_secret_key()}')"
+DJANGO_SECRET_KEY="django-insecure-[secret]"
+
+# Allowed accessible hosts
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
+
+# Credentials for Django superuser; useful to access admin panel
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_EMAIL=admin@example.com
+DJANGO_SUPERUSER_PASSWORD=your_secure_password
+
+# Connection string to your postgres database instance, e.g. hosted on supabase
+DATABASE_URL="postgres://user:pass@host:port/db"
