--- a/hackyeahAPI/docker-compose.override.yml
+++ b/hackyeahAPI/docker-compose.override.yml
@@ -18,6 +18,8 @@ services:
       sh -c "
         echo 'Waiting for the database to be ready...' &&
         python manage.py migrate &&
+        echo 'Setting up admin panel credentials...' &&
+        python manage.py shell -c \"from django.contrib.auth import get_user_model; User = get_user_model(); User.objects.filter(username='${DJANGO_SUPERUSER_USERNAME}').exists() or User.objects.create_superuser('${DJANGO_SUPERUSER_USERNAME}', '${DJANGO_SUPERUSER_EMAIL}', '${DJANGO_SUPERUSER_PASSWORD}')\" &&
         echo 'Starting development server...' &&
         python manage.py runserver 0.0.0.0:8080
       "
